Transfer by dialpad: Spacing-related fixes (#6301)
This PR builds on top of #6217.

It aims to cover:

    Increasing the size of the dial pad in general.
    Spacing the number buttons out a bit more from each other.
    Shrinking the separator bar between the text entry field and number buttons.

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -360,8 +360,20 @@ limitations under the License.
     }
 }
 
+.mx_InviteDialog_dialPad .mx_InviteDialog_dialPadField:focus-within {
+    border-color: #0DBD8B;
+}
+
 .mx_InviteDialog_dialPad {
     width: 224px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mx_InviteDialog_dialPad .mx_DialPad {
+    row-gap: 16px;
+    column-gap: 48px;
+
     margin-left: auto;
     margin-right: auto;
 }
